--- a/nofo/html/settings.html
+++ b/nofo/html/settings.html
@@ -4,6 +4,19 @@
         <span class="name">Change theme</span>
         <span class="icon-theme" id="icontheme" onclick="changetheme(this);"><input type="checkbox" name="day" id="theme"></span>
     </div>
+    <div class="settings-menu-block">
+        <div class="settings-card">
+            <h1>Battary</h1>
+            <div class="batary"><div class="batary-level" id="lvlbtry"></div><img src="../resources/energy.png" alt="chage" class="charge" id="charge"><h2 class="persent" id="persent"></h2></div>
+            <h2 id="chargtime">Charging-time: sec</h2>
+        </div>
+        <div class="settings-card">
+            
+        </div>
+        <div class="settings-card">
+            
+        </div>
+    </div>
 </div>
 <script>preload();</script>
 <script src="../js/settings.js"></script>
