--- a/nofo/html/settings.html
+++ b/nofo/html/settings.html
@@ -2,21 +2,63 @@
 <div class="settings-block">
     <div class="setings-menu-point">
         <span class="name">Change theme</span>
-        <span class="icon-theme" id="icontheme" onclick="changetheme(this);"><input type="checkbox" name="day" id="theme"></span>
+        <span class="icon-theme" id="icontheme" onclick="changetheme(this);"><input type="checkbox" name="day"
+                id="theme"></span>
     </div>
     <div class="settings-menu-block">
         <div class="settings-card">
-            <h1>Battary</h1>
-            <div class="batary"><div class="batary-level" id="lvlbtry"></div><img src="../resources/energy.png" alt="chage" class="charge" id="charge"><h2 class="persent" id="persent"></h2></div>
+            <h1>Battery</h1>
+            <div class="batary">
+                <div class="batary-level" id="lvlbtry"></div><img src="../resources/energy.png" alt="chage"
+                    class="charge" id="charge">
+                <h2 class="persent" id="persent"></h2>
+            </div>
             <h2 id="chargtime">Charging-time: sec</h2>
         </div>
-        <div class="settings-card">
-            
-        </div>
-        <div class="settings-card">
-            
+        <div class="big-settings-card">
+            <div class="setings-menu-point"><span class="name-coin"><img src="../resources/euro.png" alt=""
+                        class="coins">Euro</span>
+                <div class="toggle normal">
+                    <input onchange="checkcoins(this)" id="normal" type="checkbox" />
+                    <label class="toggle-item" for="normal"></label>
+                </div>
+            </div>
+            <div class="setings-menu-point"><span class="name-coin"><img src="../resources/dollar-symbol.png" alt=""
+                        class="coins">Usd</span>
+                <div class="toggle normal">
+                    <input onchange="checkcoins(this)" id="normal1" type="checkbox" />
+                    <label class="toggle-item" for="normal1"></label>
+                </div>
+            </div>
+            <div class="setings-menu-point"><span class="name-coin"><img src="../resources/ruble-currency-sign.png"
+                        alt="" class="coins">Rubbles</span>
+                <div class="toggle normal">
+                    <input onchange="checkcoins(this)" id="normal2" type="checkbox" />
+                    <label class="toggle-item" for="normal2"></label>
+                </div>
+            </div>
+            <div class="setings-menu-point"><span class="name-coin"><img src="../resources/eth.png" alt=""
+                        class="coins">Etherium</span>
+                <div class="toggle normal">
+                    <input onchange="checkcoins(this)" id="normal3" type="checkbox" />
+                    <label class="toggle-item" for="normal3"></label>
+                </div>
+            </div>
+            <div class="setings-menu-point"><span class="name-coin"><img src="../resources/bitcoin-logo.png" alt=""
+                        class="coins">Bitcoin</span>
+                <div class="toggle normal">
+                    <input onchange="checkcoins(this)" id="normal4" type="checkbox" />
+                    <label class="toggle-item" for="normal4"></label>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<script>preload();</script>
+<script>
+    if (!theme) {
+        document.querySelectorAll('.coins').forEach((element) => { element.classList.add('light-coins') });
+    }
+    preload();
+    </script>
 <script src="../js/settings.js"></script>
+<script>repeats();</script>
