--- a/nofo/html/loginpage.html
+++ b/nofo/html/loginpage.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Nofo</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../resources/Group 2.png" type="image/x-icon">
 
     <script src="../js/login.js"></script>
 </head>
