--- a/nofo/html/followacc.html
+++ b/nofo/html/followacc.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" class="light">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../js/preload.js"></script>
     <script src="../js/followacc.js"></script>
-    
+
     <title>Acc</title>
     <link rel="shortcut icon" href="../resources/Group 2.png" type="image/x-icon">
 
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body onload="display_info()">
     <div class="content-new">
         <div class="preloader" id="preloader">
@@ -19,8 +21,19 @@
         </div>
         <div class="banner_acc" id="banner"><img src="" alt="" id="ava"></div>
         <span class="size-name new-name" id="name">Name</span>
-        <b><h1 class="new-bio">Biography</h1></b>
-        <span class="name" id="bio">bio</span>
+        <div class="yourarts-coll">
+            <b>
+                <h1 class="new-bio">Biography</h1>
+            </b><br>
+            <span class="name" id="bio">bio</span><br><br>
+
+            <b>
+                <span class="size-name">User's Arts</span>
+            </b>
+            <div class="shop-new" id="shops">
+
+            </div>
+        </div>
     </div>
 </body>
 </html>
