--- a/nofo/html/index.html
+++ b/nofo/html/index.html
@@ -92,7 +92,7 @@
                 <div class="description-buttons">
                     <button class="blue-button account-btn" onclick="youracc()">Your Account</button>
                     <div class="grey-btn" onclick="yourarts()"><img src="../resources/Upload.png" alt="share"></div>
-                    <div class="grey-btn" onclick="shareacc()"><img src="../resources/Group 427320311.png" alt="more"></div>
+                    <div class="grey-btn" onclick="shareacc()"><img src="../resources/send.png" alt="more"></div>
                 </div>
                 <div class="line"></div>
                 <div class="recomendations">
